; ModuleID = '/home/carl/AnghaBench/git/extr_write-or-die.c_write_or_die.c'
source_filename = "/home/carl/AnghaBench/git/extr_write-or-die.c_write_or_die.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"write error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_or_die(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = call i64 @write_in_full(i32 %7, i8* %8, i64 %9)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32, i32* @errno, align 4
  %14 = call i32 @check_pipe(i32 %13)
  %15 = call i32 @die_errno(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %12, %3
  ret void
}

declare dso_local i64 @write_in_full(i32, i8*, i64) #1

declare dso_local i32 @check_pipe(i32) #1

declare dso_local i32 @die_errno(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
